--- a/SATapp/app/src/main/res/menu/tickets_filter_menu.xml
+++ b/SATapp/app/src/main/res/menu/tickets_filter_menu.xml
@@ -2,6 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/filter_assign"
+        android:icon="@drawable/ic_assignment"
+        android:title="Asignaciones"
+        app:showAsAction="ifRoom">
+    </item>
+    <item
         android:id="@+id/filter_icon"
         android:icon="@drawable/ic_filter_list_white_24dp"
         android:title="Filter"
