--- a/SATapp/app/src/main/res/layout/content_inventariable_detail.xml
+++ b/SATapp/app/src/main/res/layout/content_inventariable_detail.xml
@@ -67,7 +67,7 @@
             android:clickable="true"
             app:layout_constraintBottom_toTopOf="@+id/guideline2"
             app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/ic_edit_white_24dp" />
+            app:srcCompat="@drawable/ic_image2" />
 
         <ScrollView
             android:layout_width="0dp"
